--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{FCB7DF69-2F77-49DC-8094-A76ECD0357BB}</ProjectGuid>
     <RootNamespace>Server</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.22000.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.20348.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -155,6 +155,8 @@
     <ClCompile Include="cmedia_server.cpp" />
     <ClCompile Include="crate_calculator.cpp" />
     <ClCompile Include="csrtp_session.cpp" />
+    <ClCompile Include="cudp_socket.cpp" />
+    <ClCompile Include="cudp_socket_handler.cpp" />
     <ClCompile Include="cuv_ip.cpp" />
     <ClCompile Include="cuv_util.cpp" />
     <ClCompile Include="croom.cpp" />
@@ -221,6 +223,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Media.cpp" />
     <ClCompile Include="Parameters.cpp" />
+    <ClCompile Include="PortManager.cpp" />
     <ClCompile Include="RtcpFeedback.cpp" />
     <ClCompile Include="RtcpParameters.cpp" />
     <ClCompile Include="rtcp\Bye.cpp" />
@@ -278,6 +281,8 @@
     <ClInclude Include="cnet_define.h" />
     <ClInclude Include="crate_calculator.h" />
     <ClInclude Include="csrtp_session.h" />
+    <ClInclude Include="cudp_socket.h" />
+    <ClInclude Include="cudp_socket_handler.h" />
     <ClInclude Include="cuv_ip.h" />
     <ClInclude Include="cuv_util.h" />
     <ClInclude Include="croom.h" />
@@ -366,6 +371,7 @@
     <ClInclude Include="libwebrtc\system_wrappers\source\field_trial.h" />
     <ClInclude Include="Parameters.hpp" />
     <ClInclude Include="PayloadDescriptorHandler.hpp" />
+    <ClInclude Include="PortManager.hpp" />
     <ClInclude Include="rtcp\Bye.hpp" />
     <ClInclude Include="rtcp\CompoundPacket.hpp" />
     <ClInclude Include="rtcp\Feedback.hpp" />
